<package format="2">
  <name>plc_ros_bridge</name>
  <version>0.1.0</version>
  <description> Bridge software between ROS and PLC </description>

  <maintainer email="yuki.asano3206@gmail.com">Yuki Asano</maintainer>
  <author email="yuki.asano3206@gmail.com">Yuki Asano</author>

  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>

  <depend>rospy</depend>
  <depend>std_msgs</depend>
  <depend>plcpy</depend>

</package>
